--- a/src/components/Cart.module.css
+++ b/src/components/Cart.module.css
@@ -17,6 +17,33 @@
     background-color:#ffffff;
 }
 
+.cartItem{
+    display:grid;
+    grid-template-columns: repeat(4,1fr);
+    grid-template-rows: 8rem;
+    justify-content:center;
+    align-items:center;
+    gap:0.5rem;
+    background:#F8F6F7;
+    margin:0 1rem;
+    border:1px solid lightgrey;
+    border-radius:0.25rem;
+    font-size:1.1rem;
+    text-align:center;
+}
+
+.item_img{
+    width:100%;
+    height:100%;
+}
+
+.item_img > img{
+    width:100%;
+    height:100%;
+    object-fit: contain;
+}
+
+
 .emptyCart{
     width:100%;
     margin:auto;
@@ -35,6 +62,38 @@
     width:100%;
     height:100%;
     object-fit: contain;
+}
+
+.qty{
+    display:flex;
+    align-items:center;
+}
+
+.qty > p{
+    margin:0 1rem;
+}
+
+.qty > button{
+    color:white;
+    background:#ee4a1b;
+    font-size:1rem;
+    font-weight:600;
+    width:1.8rem;
+    height:1.8rem;
+    text-align:center;
+    padding:0;
+    border-radius: 50%;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    -ms-border-radius: 50%;
+    -o-border-radius: 50%;
+    border:none;
+}
+
+.item_title{
+    text-align:left;
+    margin:0.5rem 0;
+    font-size:1.2rem;
 }
 
 .emptyCart_heading{
@@ -87,6 +146,7 @@
 }
 
 .applyPromo > input{
+    font-size: 1rem;
     padding:0.5rem;
     border:2px solid lightgrey;
     border-radius:0.25rem;
@@ -98,7 +158,7 @@
 
 .applyPromo > button{
     padding:0.5rem;
-    width:30%;
+    width:25%;
     color:white;
     background:#ee4a1b;
     border-radius:0.25rem;
