--- a/src/components/Products.module.css
+++ b/src/components/Products.module.css
@@ -1,26 +1,45 @@
-body {
-    margin: 0;
-    padding: 0;
-  }
+
   .grid {
     max-width: 65%;
     display: grid;
     margin: auto;
     grid-template-columns: repeat(4, 1fr);
-    /* border: 2px solid red; */
     margin-top: 0.5rem;
     gap: 1rem;
   }
   .grid > div {
-    /* border: 1px solid green; */
     height: 70vh;
     width: 100%;
   }
-  
-  p {
-    text-align: center;
-    font-size: 0.8rem;
+
+  .headerDiv{
+    width:80%;
+    margin:auto;
+    display:grid;
+    grid-template-columns: 1fr 6fr;
+    gap:1rem;
   }
+
+  .sideBar > p{
+    font-size: 0.85rem;
+    cursor:pointer;
+  }
+
+  .sideBar > p:hover{
+    font-weight: 600;
+  }
+
+  .banner{
+    width:100%;
+    height:100%;
+  }
+
+  .banner > img{
+    width:100%;
+    height:100%;
+    object-fit: contain;
+  }
+
   .text {
     font-weight: 700;
   }
@@ -101,10 +120,7 @@ body {
     display: flex;
     gap: 30px;
   }
-  
-  * {
-    font-family: "Helvetica Neue", Helvetica, sans-serif;
-  }
+
   
   #desiner {
     display: inline-block;
@@ -113,7 +129,6 @@ body {
   #clear {
     font-size: 11px;
     color: #000;
-    margin-top: 5px;
   }
   #filter {
     font-size: 11px;
@@ -127,6 +142,7 @@ body {
     font-weight: 700;
     margin-right: 5px;
   }
+  
   select {
     font-size: 11px;
     border: none;
@@ -141,6 +157,7 @@ body {
   #headerDiv {
     display: flex;
   }
+
   #sideBar > p{
     text-align: left;
     margin-left: 80px;
