--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,10 @@
-
 body {
   margin: 0;
   font-family: "Helvetica Neue", Helvetica, sans-serif;
-  box-sizing: border-box;
+  /* box-sizing: border-box; */
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
